# Financial-Sentiment-Analysis

./: .gitignore  0518.py  DISCLAIMER.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  run_demo.py
configs/: config.yaml
demo/: app.py
scripts/: train.py
src/: __init__.py
src/backtest/: trading_strategy.py
src/data/: news_data.py
src/models/: evaluation.py  explainability.py  sentiment_models.py
src/utils/: core.py
tests/: test_basic.py
